<resources>
    <string name="app_name">LacTemperature</string>
    <string name="menu_afficher_un_releve">Afficher un relevé</string>
    <string name="menu_saisir_une_temperature">Saisir une température</string>
    <string name="menu_afficher_la_moyenne_des_releves">Afficher la moyenne des relevés</string>
    <string name="menuSaisieTemperature">Saisir une température</string>
    <string name="menuAfficherUnReleve">Afficher un relevé</string>
    <string name="menuAfficherMoyenneReleves">Afficher la moyenne des relevés</string>
    <string name="QuestionJourReleve">De quel jour souhaitez-vous le relevé? </string>
    <string name="DateReleve">Date de relevé</string>
    <string name="QuestionHeure">À quelle heure? </string>
    <string name="sixh">6h</string>
    <string name="douzeh">12h</string>
    <string name="dixhuith">18h</string>
    <string name="vingtquatreh">24h</string>
    <string name="QuestionLac">De quel lac? </string>
    <string name="questionUnite">En quelle unité doit-être affichée la température: </string>
    <string name="C"> °C</string>
    <string name="F"> °F</string>
    <string name="BoutonValider">valider</string>
    <string name="BoutonAnnuler">annuler</string>
    <string name="QuestionReleve">Quel jour effectuez-vous ce relevé? </string>
    <string name="questionLacAfficherReleve">Quel lac relevez-vous ? </string>
    <string name="QuestionTemp">Quelle est la température relevée ? </string>
    <string name="QuestionMoisMoyenneReleve">De quel mois desirez-vous la moyenne des relevés ? </string>
    <string name="QuestionLacMoyenne">De quel lac ? </string>
    <string name="MoyenneReleveReponse">La moyenne des relevés est de : </string>
    <string name="MoyenneAfficherLac">Sur le lac : </string>
    <string name="Retour">Retour</string>
    <string name="BoutonListeLac">Liste des Lacs</string>
    <string name="longitude">Longitude : </string>
    <string name="lattitude">Latitude : </string>
    <string name="selectionnez_un_lac">Selectionnez un lac : </string>
    <string name="menulisteLac">Liste des lacs</string>
    <string name="lattitudeLac">Latitude: </string>
    <string name="longitudeLac">Longitude: </string>
    <string name="majLacs">Mise à Jour des Lacs </string>
    <string name="bouton_suppression_lac"> Supprimer un Lac</string>
    <string name="bouton_ajout_lac"> Ajouter un Lac</string>
    <string name="bouton_modification_lac"> Modifier un Lac</string>
    <string name="selectionnez_un_lac_modif"> Selectionner le lac à modifier: </string>
    <string name="selectionnez_un_lac_suppr"> Selectionner le lac à supprimer: </string>
    <string name="chooseLac"> Nom du Lac : </string>
    <string name="menuMAJLac">Mises à jour des lacs</string>
</resources>