<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/relativeLayoutBoutons3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonAjouterLac"
                    style="@style/bouton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bouton_ajout_lac" />

                <Button
                    android:id="@+id/buttonModifierLac"
                    style="@style/bouton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bouton_modification_lac"
                    android:textColor="#FFFFFF" />


                <Button
                    android:id="@+id/buttonSuppressionLac"
                    style="@style/bouton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bouton_suppression_lac" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="35dp">

                    <Button
                        android:id="@+id/buttonRetourMenuLac"
                        style="@style/bouton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Retour" />
                </LinearLayout>
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>