<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageViewLogoApplication"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo_lac_temperature_petit" />

        <LinearLayout
            android:id="@+id/linearLayoutBoutons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/relativeLayoutBoutons1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonSaisirTemperature"
                    style="@style/bouton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_saisir_une_temperature" />

                <Button
                    android:id="@+id/buttonAfficherReleve"
                    style="@style/bouton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_afficher_un_releve"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutBoutons2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonAfficherMoyenneReleves"
                    style="@style/bouton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_afficher_la_moyenne_des_releves" />

                <Button
                    android:id="@+id/buttonListeLac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/bouton"
                    android:text="@string/BoutonListeLac" />
            </LinearLayout>
            <LinearLayout
            android:id="@+id/linearLayoutBoutons3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonMAJLacs"
                style="@style/bouton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/majLacs" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>